--- a/packages/ui/avatar/package.json
+++ b/packages/ui/avatar/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/avatar",
-    "version": "3.0.0-alpha.0",
+    "version": "3.0.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -28,9 +28,9 @@
     "devDependencies": {
         "@ant-design/icons": "^4.7.0",
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0-alpha.0",
-        "@osui/icons": "^3.0.0-alpha.0",
-        "@osui/tooltip": "^3.0.0-alpha.0",
+        "@osui/brand-provider": "^3.0.0",
+        "@osui/icons": "^3.0.0",
+        "@osui/tooltip": "^3.0.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -92,6 +92,6 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915",
+    "gitHead": "10818c8b95cc9d33c7ff1e4a7e15391b9077e52d",
     "packageManager": "pnpm@7.14.2"
 }
