--- a/packages/ui-icons/osui-icons/package.json
+++ b/packages/ui-icons/osui-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@osui/icons",
-  "version": "3.0.0-alpha.0",
+  "version": "3.0.0",
   "description": "OSUI icons icloud-theme",
   "author": {
     "name": "zhanglili01,huoyuxuan,lisiqi06,guyiling"
@@ -59,5 +59,5 @@
     "access": "public",
     "registry": "https://registry.npmjs.com"
   },
-  "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915"
+  "gitHead": "10818c8b95cc9d33c7ff1e4a7e15391b9077e52d"
 }
