--- a/packages/ui/form/package.json
+++ b/packages/ui/form/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/form",
-    "version": "3.0.0-alpha.0",
+    "version": "3.0.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -28,17 +28,17 @@
     "devDependencies": {
         "@ant-design/icons": "^4.7.0",
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0-alpha.0",
-        "@osui/button": "^3.0.0-alpha.0",
-        "@osui/checkbox": "^3.0.0-alpha.0",
-        "@osui/date-picker": "^3.0.0-alpha.0",
-        "@osui/divider": "^3.0.0-alpha.0",
-        "@osui/icons": "^3.0.0-alpha.0",
-        "@osui/input": "^3.0.0-alpha.0",
-        "@osui/input-number": "^3.0.0-alpha.0",
-        "@osui/radio": "^3.0.0-alpha.0",
-        "@osui/select": "^3.0.0-alpha.0",
-        "@osui/switch": "^3.0.0-alpha.0",
+        "@osui/brand-provider": "^3.0.0",
+        "@osui/button": "^3.0.0",
+        "@osui/checkbox": "^3.0.0",
+        "@osui/date-picker": "^3.0.0",
+        "@osui/divider": "^3.0.0",
+        "@osui/icons": "^3.0.0",
+        "@osui/input": "^3.0.0",
+        "@osui/input-number": "^3.0.0",
+        "@osui/radio": "^3.0.0",
+        "@osui/select": "^3.0.0",
+        "@osui/switch": "^3.0.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -96,7 +96,7 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915",
+    "gitHead": "10818c8b95cc9d33c7ff1e4a7e15391b9077e52d",
     "dependencies": {
         "classnames": "^2.3.1"
     },
