--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/input",
-    "version": "3.0.0-alpha.0",
+    "version": "3.0.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,18 +27,18 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/auto-complete": "^3.0.0-alpha.0",
-        "@osui/brand-provider": "^3.0.0-alpha.0",
-        "@osui/button": "^3.0.0-alpha.0",
-        "@osui/cascader": "^3.0.0-alpha.0",
-        "@osui/divider": "^3.0.0-alpha.0",
-        "@osui/flex-centered": "^3.0.0-alpha.0",
-        "@osui/form": "^3.0.0-alpha.0",
-        "@osui/gap": "^3.0.0-alpha.0",
-        "@osui/icloud-theme": "^3.0.0-alpha.0",
-        "@osui/icons": "^3.0.0-alpha.0",
-        "@osui/select": "^3.0.0-alpha.0",
-        "@osui/version": "^3.0.0-alpha.0",
+        "@osui/auto-complete": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0",
+        "@osui/button": "^3.0.0",
+        "@osui/cascader": "^3.0.0",
+        "@osui/divider": "^3.0.0",
+        "@osui/flex-centered": "^3.0.0",
+        "@osui/form": "^3.0.0",
+        "@osui/gap": "^3.0.0",
+        "@osui/icloud-theme": "^3.0.0",
+        "@osui/icons": "^3.0.0",
+        "@osui/select": "^3.0.0",
+        "@osui/version": "^3.0.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -105,6 +105,6 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915",
+    "gitHead": "10818c8b95cc9d33c7ff1e4a7e15391b9077e52d",
     "packageManager": "pnpm@7.14.2"
 }
