--- a/packages/ui/select/package.json
+++ b/packages/ui/select/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/select",
-    "version": "3.0.0-alpha.0",
+    "version": "3.0.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,10 +27,10 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0-alpha.0",
-        "@osui/icons": "^3.0.0-alpha.0",
-        "@osui/space": "^3.0.0-alpha.0",
-        "@osui/spin": "^3.0.0-alpha.0",
+        "@osui/brand-provider": "^3.0.0",
+        "@osui/icons": "^3.0.0",
+        "@osui/space": "^3.0.0",
+        "@osui/spin": "^3.0.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -85,8 +85,8 @@
     },
     "dependencies": {
         "@huse/derived-state": "^1.1.1",
-        "@osui/popover": "^3.0.0-alpha.0",
-        "@osui/tag": "^3.0.0-alpha.0",
+        "@osui/popover": "^3.0.0",
+        "@osui/tag": "^3.0.0",
         "classnames": "^2.3.1",
         "hoist-non-react-statics": "^3.3.2"
     },
@@ -100,6 +100,6 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915",
+    "gitHead": "10818c8b95cc9d33c7ff1e4a7e15391b9077e52d",
     "packageManager": "pnpm@7.14.2"
 }
