--- a/packages/ui/table/package.json
+++ b/packages/ui/table/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/table",
-    "version": "3.0.0-alpha.0",
+    "version": "3.0.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -28,13 +28,13 @@
     "devDependencies": {
         "@ant-design/icons": "^4.7.0",
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0-alpha.0",
-        "@osui/form": "^3.0.0-alpha.0",
-        "@osui/icons": "^3.0.0-alpha.0",
-        "@osui/pagination": "^3.0.0-alpha.0",
-        "@osui/radio": "^3.0.0-alpha.0",
-        "@osui/space": "^3.0.0-alpha.0",
-        "@osui/switch": "^3.0.0-alpha.0",
+        "@osui/brand-provider": "^3.0.0",
+        "@osui/form": "^3.0.0",
+        "@osui/icons": "^3.0.0",
+        "@osui/pagination": "^3.0.0",
+        "@osui/radio": "^3.0.0",
+        "@osui/space": "^3.0.0",
+        "@osui/switch": "^3.0.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -92,8 +92,8 @@
     "author": "zhangxingchang",
     "license": "MIT",
     "dependencies": {
-        "@osui/button": "^3.0.0-alpha.0",
-        "@osui/spin": "^3.0.0-alpha.0",
+        "@osui/button": "^3.0.0",
+        "@osui/spin": "^3.0.0",
         "classnames": "^2.3.1",
         "hoist-non-react-statics": "^3.3.2",
         "lodash": "^4.17.21",
@@ -105,6 +105,6 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915",
+    "gitHead": "10818c8b95cc9d33c7ff1e4a7e15391b9077e52d",
     "packageManager": "pnpm@7.14.2"
 }
