--- a/packages/ui/tag/package.json
+++ b/packages/ui/tag/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/tag",
-    "version": "3.0.0-alpha.0",
+    "version": "3.0.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -31,8 +31,8 @@
         "@emotion/babel-preset-css-prop": "^11.2.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
-        "@osui/brand-provider": "^3.0.0-alpha.0",
-        "@osui/icons": "^3.0.0-alpha.0",
+        "@osui/brand-provider": "^3.0.0",
+        "@osui/icons": "^3.0.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -91,15 +91,15 @@
     "author": "huoyuxuan",
     "license": "MIT",
     "dependencies": {
-        "@osui/divider": "^3.0.0-alpha.0",
-        "@osui/input": "^3.0.0-alpha.0",
-        "@osui/tooltip": "^3.0.0-alpha.0",
+        "@osui/divider": "^3.0.0",
+        "@osui/input": "^3.0.0",
+        "@osui/tooltip": "^3.0.0",
         "classnames": "^2.3.1"
     },
     "publishConfig": {
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915",
+    "gitHead": "10818c8b95cc9d33c7ff1e4a7e15391b9077e52d",
     "packageManager": "pnpm@7.14.2"
 }
