--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/ui",
-    "version": "3.0.0-alpha.0",
+    "version": "3.0.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -28,7 +28,7 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/icons": "^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -59,79 +59,79 @@
     "author": "huoyuxuan",
     "license": "MIT",
     "dependencies": {
-        "@osui/affix": "^3.0.0-alpha.0",
-        "@osui/alert": "^3.0.0-alpha.0",
-        "@osui/anchor": "^3.0.0-alpha.0",
-        "@osui/auto-complete": "^3.0.0-alpha.0",
-        "@osui/avatar": "^3.0.0-alpha.0",
-        "@osui/back-top": "^3.0.0-alpha.0",
-        "@osui/badge": "^3.0.0-alpha.0",
-        "@osui/brand-provider": "^3.0.0-alpha.0",
-        "@osui/breadcrumb": "^3.0.0-alpha.0",
-        "@osui/button": "^3.0.0-alpha.0",
-        "@osui/calendar": "^3.0.0-alpha.0",
-        "@osui/card": "^3.0.0-alpha.0",
-        "@osui/carousel": "^3.0.0-alpha.0",
-        "@osui/cascader": "^3.0.0-alpha.0",
-        "@osui/checkbox": "^3.0.0-alpha.0",
-        "@osui/col": "^3.0.0-alpha.0",
-        "@osui/collapse": "^3.0.0-alpha.0",
-        "@osui/config-provider": "^3.0.0-alpha.0",
-        "@osui/date-picker": "^3.0.0-alpha.0",
-        "@osui/descriptions": "^3.0.0-alpha.0",
-        "@osui/divider": "^3.0.0-alpha.0",
-        "@osui/drawer": "^3.0.0-alpha.0",
-        "@osui/dropdown": "^3.0.0-alpha.0",
-        "@osui/empty": "^3.0.0-alpha.0",
-        "@osui/flex-centered": "^3.0.0-alpha.0",
-        "@osui/form": "^3.0.0-alpha.0",
-        "@osui/gap": "^3.0.0-alpha.0",
-        "@osui/grid": "^3.0.0-alpha.0",
-        "@osui/highlight-text": "^3.0.0-alpha.0",
-        "@osui/image": "^3.0.0-alpha.0",
-        "@osui/input": "^3.0.0-alpha.0",
-        "@osui/input-number": "^3.0.0-alpha.0",
-        "@osui/joyride": "^3.0.0-alpha.0",
-        "@osui/layout": "^3.0.0-alpha.0",
-        "@osui/list": "^3.0.0-alpha.0",
-        "@osui/markdown": "^3.0.0-alpha.0",
-        "@osui/mentions": "^3.0.0-alpha.0",
-        "@osui/menu": "^3.0.0-alpha.0",
-        "@osui/message": "^3.0.0-alpha.0",
-        "@osui/modal": "^3.0.0-alpha.0",
-        "@osui/notification": "^3.0.0-alpha.0",
-        "@osui/pagination": "^3.0.0-alpha.0",
-        "@osui/popconfirm": "^3.0.0-alpha.0",
-        "@osui/popover": "^3.0.0-alpha.0",
-        "@osui/progress": "^3.0.0-alpha.0",
-        "@osui/quick-edit": "^3.0.0-alpha.0",
-        "@osui/radio": "^3.0.0-alpha.0",
-        "@osui/rate": "^3.0.0-alpha.0",
-        "@osui/result": "^3.0.0-alpha.0",
-        "@osui/row": "^3.0.0-alpha.0",
-        "@osui/segmented": "^3.0.0-alpha.0",
-        "@osui/select": "^3.0.0-alpha.0",
-        "@osui/skeleton": "^3.0.0-alpha.0",
-        "@osui/slider": "^3.0.0-alpha.0",
-        "@osui/space": "^3.0.0-alpha.0",
-        "@osui/spin": "^3.0.0-alpha.0",
-        "@osui/statistic": "^3.0.0-alpha.0",
-        "@osui/steps": "^3.0.0-alpha.0",
-        "@osui/switch": "^3.0.0-alpha.0",
-        "@osui/table": "^3.0.0-alpha.0",
-        "@osui/tabs": "^3.0.0-alpha.0",
-        "@osui/tag": "^3.0.0-alpha.0",
-        "@osui/text-overflow-tooltip": "^3.0.0-alpha.0",
-        "@osui/theme-provider": "^3.0.0-alpha.0",
-        "@osui/time-picker": "^3.0.0-alpha.0",
-        "@osui/timeline": "^3.0.0-alpha.0",
-        "@osui/tooltip": "^3.0.0-alpha.0",
-        "@osui/transfer": "^3.0.0-alpha.0",
-        "@osui/tree": "^3.0.0-alpha.0",
-        "@osui/tree-select": "^3.0.0-alpha.0",
-        "@osui/typography": "^3.0.0-alpha.0",
-        "@osui/upload": "^3.0.0-alpha.0",
-        "@osui/version": "^3.0.0-alpha.0",
+        "@osui/affix": "^3.0.0",
+        "@osui/alert": "^3.0.0",
+        "@osui/anchor": "^3.0.0",
+        "@osui/auto-complete": "^3.0.0",
+        "@osui/avatar": "^3.0.0",
+        "@osui/back-top": "^3.0.0",
+        "@osui/badge": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0",
+        "@osui/breadcrumb": "^3.0.0",
+        "@osui/button": "^3.0.0",
+        "@osui/calendar": "^3.0.0",
+        "@osui/card": "^3.0.0",
+        "@osui/carousel": "^3.0.0",
+        "@osui/cascader": "^3.0.0",
+        "@osui/checkbox": "^3.0.0",
+        "@osui/col": "^3.0.0",
+        "@osui/collapse": "^3.0.0",
+        "@osui/config-provider": "^3.0.0",
+        "@osui/date-picker": "^3.0.0",
+        "@osui/descriptions": "^3.0.0",
+        "@osui/divider": "^3.0.0",
+        "@osui/drawer": "^3.0.0",
+        "@osui/dropdown": "^3.0.0",
+        "@osui/empty": "^3.0.0",
+        "@osui/flex-centered": "^3.0.0",
+        "@osui/form": "^3.0.0",
+        "@osui/gap": "^3.0.0",
+        "@osui/grid": "^3.0.0",
+        "@osui/highlight-text": "^3.0.0",
+        "@osui/image": "^3.0.0",
+        "@osui/input": "^3.0.0",
+        "@osui/input-number": "^3.0.0",
+        "@osui/joyride": "^3.0.0",
+        "@osui/layout": "^3.0.0",
+        "@osui/list": "^3.0.0",
+        "@osui/markdown": "^3.0.0",
+        "@osui/mentions": "^3.0.0",
+        "@osui/menu": "^3.0.0",
+        "@osui/message": "^3.0.0",
+        "@osui/modal": "^3.0.0",
+        "@osui/notification": "^3.0.0",
+        "@osui/pagination": "^3.0.0",
+        "@osui/popconfirm": "^3.0.0",
+        "@osui/popover": "^3.0.0",
+        "@osui/progress": "^3.0.0",
+        "@osui/quick-edit": "^3.0.0",
+        "@osui/radio": "^3.0.0",
+        "@osui/rate": "^3.0.0",
+        "@osui/result": "^3.0.0",
+        "@osui/row": "^3.0.0",
+        "@osui/segmented": "^3.0.0",
+        "@osui/select": "^3.0.0",
+        "@osui/skeleton": "^3.0.0",
+        "@osui/slider": "^3.0.0",
+        "@osui/space": "^3.0.0",
+        "@osui/spin": "^3.0.0",
+        "@osui/statistic": "^3.0.0",
+        "@osui/steps": "^3.0.0",
+        "@osui/switch": "^3.0.0",
+        "@osui/table": "^3.0.0",
+        "@osui/tabs": "^3.0.0",
+        "@osui/tag": "^3.0.0",
+        "@osui/text-overflow-tooltip": "^3.0.0",
+        "@osui/theme-provider": "^3.0.0",
+        "@osui/time-picker": "^3.0.0",
+        "@osui/timeline": "^3.0.0",
+        "@osui/tooltip": "^3.0.0",
+        "@osui/transfer": "^3.0.0",
+        "@osui/tree": "^3.0.0",
+        "@osui/tree-select": "^3.0.0",
+        "@osui/typography": "^3.0.0",
+        "@osui/upload": "^3.0.0",
+        "@osui/version": "^3.0.0",
         "classnames": "^2.3.1",
         "github-markdown-css": "^4.0.0",
         "lodash.partial": "^4.2.1",
@@ -142,6 +142,6 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915",
+    "gitHead": "10818c8b95cc9d33c7ff1e4a7e15391b9077e52d",
     "packageManager": "pnpm@7.14.2"
 }
