fix: 修复space, carousel报错, 升级reksript, 修复一点点type问题

--- a/package.json
+++ b/package.json
@@ -35,16 +35,14 @@
         "@commitlint/config-conventional": "^9.1.2",
         "@ecomfe/stylelint-config": "^1.1.2",
         "@emotion/babel-preset-css-prop": "^11.10.0",
-        "@osui/icloud-theme": "^2.1.17",
-        "@osui/icons": "^2.1.9",
-        "@osui/icons-icloud": "^2.1.9",
-        "@reskript/cli": "^2.5.4",
-        "@reskript/cli-lint": "^2.5.4",
-        "@reskript/config-lint": "^2.5.4",
+        "@reskript/cli": "^6.0.3",
+        "@reskript/cli-lint": "^6.0.3",
+        "@reskript/config-lint": "^6.0.3",
         "@storybook/cli": "^6.5.10",
         "@types/css": "^0.0.33",
         "@types/less": "^3.0.3",
         "@types/react": "17.0.53",
+        "@typescript-eslint/eslint-plugin": "^6.7.5",
         "@typescript-eslint/parser": "^6.7.2",
         "commitizen": "^4.2.5",
         "css": "^3.0.0",
