--- a/demo/package.json
+++ b/demo/package.json
@@ -156,5 +156,6 @@
         "classnames": "^2.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
-    }
+    },
+    "packageManager": "yarn@4.0.2"
 }
