--- a/demo/package.json
+++ b/demo/package.json
@@ -1,161 +1,160 @@
 {
-    "name": "@osui/icloud-demo",
-    "private": true,
-    "version": "2.1.9",
-    "description": "",
-    "main": "lib/index.js",
-    "module": "es/index.js",
-    "types": "es/index.d.ts",
-    "files": [
-        "es",
-        "lib",
-        "src",
-        "README.md",
-        "CHANGELOG.md"
-    ],
-    "scripts": {
-        "lint": "skr lint",
-        "build": "echo 'done'",
-        "build-storybook": "storybook build",
-        "storybook": "storybook dev -p 8700",
-        "clean": "rm -rf node_modules && rm -rf es",
-        "test": "echo 'jest --config jest.config.js'",
-        "sb-upgrade": "sb upgrade"
-    },
-    "devDependencies": {
-        "@ant-design/icons": "^4.7.0",
-        "@babel/cli": "^7.18.10",
-        "@babel/preset-env": "^7.10.4",
-        "@babel/preset-react": "^7.10.4",
-        "@babel/preset-typescript": "^7.23.2",
-        "@emotion/styled": "^11.8.1",
-        "@huse/boolean": "^1.1.2",
-        "@huse/input-value": "^1.1.1",
-        "@osui/icloud-theme": "^3.0.2",
-        "@osui/theme": "^3.0.2",
-        "@storybook/addon-docs": "^7.5.1",
-        "@storybook/addon-essentials": "^7.5.1",
-        "@storybook/addon-interactions": "^7.5.1",
-        "@storybook/addon-links": "^7.5.1",
-        "@storybook/addon-onboarding": "^1.0.8",
-        "@storybook/addon-viewport": "^7.5.1",
-        "@storybook/blocks": "^7.5.1",
-        "@storybook/react": "^7.5.1",
-        "@storybook/testing-library": "^0.2.2",
-        "@storybook/theming": "^6.4.19",
-        "@types/enzyme": "^3.10.12",
-        "@types/jest": "^27.5.2",
-        "@types/react-dom": "^17.0.17",
-        "@types/react-test-renderer": "^17.0.2",
-        "babel-loader": "^8.2.5",
-        "babel-merge": "^3.0.0",
-        "cpy-cli": "^3.1.1",
-        "enzyme": "^3.11.0",
-        "eslint": "^8.23.0",
-        "eslint-plugin-storybook": "^0.6.15",
-        "huse": "^2.0.3",
-        "husky": "^4.3.8",
-        "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.5.1",
-        "less-plugin-npm-import": "^2.1.0",
-        "prop-types": "^15.8.1",
-        "react-is": "^17.0.2",
-        "react-omni-link": "^2.1.1",
-        "react-router-dom": "^5.3.3",
-        "react-test-renderer": "^17.0.2",
-        "storybook": "^7.5.1",
-        "storybook-dark-mode": "^3.0.1",
-        "ts-jest": "^27.1.5",
-        "typescript": "^4.8.2",
-        "vite": "^4.5.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://gitee.com/gitee-fe/osui/tree/master"
-    },
-    "author": "huoyuxuan",
-    "license": "MIT",
-    "dependencies": {
-        "@emotion/react": "^11.10.6",
-        "@osui/affix": "^3.0.3",
-        "@osui/alert": "^3.0.3",
-        "@osui/anchor": "^3.0.3",
-        "@osui/auto-complete": "^3.0.3",
-        "@osui/avatar": "^3.0.3",
-        "@osui/back-top": "^3.0.3",
-        "@osui/badge": "^3.0.3",
-        "@osui/brand-provider": "^3.0.3",
-        "@osui/breadcrumb": "^3.0.3",
-        "@osui/button": "^3.0.3",
-        "@osui/calendar": "^3.0.3",
-        "@osui/card": "^3.0.3",
-        "@osui/carousel": "^3.0.3",
-        "@osui/cascader": "^3.0.3",
-        "@osui/checkbox": "^3.0.3",
-        "@osui/col": "^3.0.3",
-        "@osui/collapse": "^3.0.3",
-        "@osui/config-provider": "^3.0.3",
-        "@osui/date-picker": "^3.0.3",
-        "@osui/descriptions": "^3.0.3",
-        "@osui/divider": "^3.0.3",
-        "@osui/drawer": "^3.0.3",
-        "@osui/dropdown": "^3.0.3",
-        "@osui/empty": "^3.0.3",
-        "@osui/flex-centered": "^3.0.3",
-        "@osui/form": "^3.0.3",
-        "@osui/gap": "^3.0.3",
-        "@osui/grid": "^3.0.3",
-        "@osui/highlight-text": "^3.0.3",
-        "@osui/icloud-theme": "^3.0.3",
-        "@osui/icons": "^3.0.3",
-        "@osui/image": "^3.0.3",
-        "@osui/input": "^3.0.3",
-        "@osui/input-number": "^3.0.3",
-        "@osui/joyride": "^3.0.3",
-        "@osui/layout": "^3.0.3",
-        "@osui/list": "^3.0.3",
-        "@osui/markdown": "^3.0.3",
-        "@osui/mentions": "^3.0.3",
-        "@osui/menu": "^3.0.3",
-        "@osui/message": "^3.0.3",
-        "@osui/modal": "^3.0.3",
-        "@osui/notification": "^3.0.3",
-        "@osui/pagination": "^3.0.3",
-        "@osui/popconfirm": "^3.0.3",
-        "@osui/popover": "^3.0.3",
-        "@osui/progress": "^3.0.3",
-        "@osui/quick-edit": "^3.0.3",
-        "@osui/radio": "^3.0.3",
-        "@osui/rate": "^3.0.3",
-        "@osui/result": "^3.0.3",
-        "@osui/row": "^3.0.3",
-        "@osui/segmented": "^3.0.3",
-        "@osui/select": "^3.0.3",
-        "@osui/skeleton": "^3.0.3",
-        "@osui/slider": "^3.0.3",
-        "@osui/space": "^3.0.3",
-        "@osui/spin": "^3.0.3",
-        "@osui/statistic": "^3.0.3",
-        "@osui/steps": "^3.0.3",
-        "@osui/switch": "^3.0.3",
-        "@osui/table": "^3.0.3",
-        "@osui/tabs": "^3.0.3",
-        "@osui/tag": "^3.0.3",
-        "@osui/text-overflow-tooltip": "^3.0.3",
-        "@osui/theme-provider": "^3.0.3",
-        "@osui/time-picker": "^3.0.3",
-        "@osui/timeline": "^3.0.3",
-        "@osui/tooltip": "^3.0.3",
-        "@osui/transfer": "^3.0.3",
-        "@osui/tree": "^3.0.3",
-        "@osui/tree-select": "^3.0.3",
-        "@osui/typography": "^3.0.3",
-        "@osui/upload": "^3.0.3",
-        "@osui/version": "^3.0.3",
-        "antd": "5.4.7",
-        "classnames": "^2.3.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
-    },
-    "packageManager": "yarn@4.0.2"
+  "name": "@osui/icloud-demo",
+  "private": true,
+  "version": "2.1.9",
+  "description": "",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "types": "es/index.d.ts",
+  "files": [
+    "es",
+    "lib",
+    "src",
+    "README.md",
+    "CHANGELOG.md"
+  ],
+  "scripts": {
+    "lint": "skr lint",
+    "build": "echo 'done'",
+    "build-storybook": "storybook build",
+    "storybook": "storybook dev -p 8700",
+    "clean": "rm -rf node_modules && rm -rf es",
+    "test": "echo 'jest --config jest.config.js'",
+    "sb-upgrade": "sb upgrade"
+  },
+  "devDependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@babel/cli": "^7.18.10",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.23.2",
+    "@emotion/styled": "^11.8.1",
+    "@huse/boolean": "^1.1.2",
+    "@huse/input-value": "^1.1.1",
+    "@storybook/addon-docs": "^7.5.1",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-viewport": "^7.5.1",
+    "@storybook/blocks": "^7.5.1",
+    "@storybook/react": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^6.4.19",
+    "@types/enzyme": "^3.10.12",
+    "@types/jest": "^27.5.2",
+    "@types/react-dom": "^17.0.17",
+    "@types/react-test-renderer": "^17.0.2",
+    "babel-loader": "^8.2.5",
+    "babel-merge": "^3.0.0",
+    "cpy-cli": "^3.1.1",
+    "enzyme": "^3.11.0",
+    "eslint": "^8.23.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "huse": "^2.0.3",
+    "husky": "^4.3.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "less-plugin-npm-import": "^2.1.0",
+    "prop-types": "^15.8.1",
+    "react-is": "^17.0.2",
+    "react-omni-link": "^2.1.1",
+    "react-router-dom": "^5.3.3",
+    "react-test-renderer": "^17.0.2",
+    "storybook": "^7.5.1",
+    "storybook-dark-mode": "^3.0.1",
+    "ts-jest": "^27.1.5",
+    "typescript": "^4.8.2",
+    "vite": "^4.5.0",
+    "@types/bun": "latest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://gitee.com/gitee-fe/osui/tree/master"
+  },
+  "author": "huoyuxuan",
+  "license": "MIT",
+  "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@osui/affix": "latest",
+    "@osui/alert": "latest",
+    "@osui/anchor": "latest",
+    "@osui/auto-complete": "latest",
+    "@osui/avatar": "latest",
+    "@osui/back-top": "latest",
+    "@osui/badge": "latest",
+    "@osui/brand-provider": "latest",
+    "@osui/breadcrumb": "latest",
+    "@osui/button": "latest",
+    "@osui/calendar": "latest",
+    "@osui/card": "latest",
+    "@osui/carousel": "latest",
+    "@osui/cascader": "latest",
+    "@osui/checkbox": "latest",
+    "@osui/col": "latest",
+    "@osui/collapse": "latest",
+    "@osui/config-provider": "latest",
+    "@osui/date-picker": "latest",
+    "@osui/descriptions": "latest",
+    "@osui/divider": "latest",
+    "@osui/drawer": "latest",
+    "@osui/dropdown": "latest",
+    "@osui/empty": "latest",
+    "@osui/flex-centered": "latest",
+    "@osui/form": "latest",
+    "@osui/gap": "latest",
+    "@osui/grid": "latest",
+    "@osui/highlight-text": "latest",
+    "@osui/icloud-theme": "latest",
+    "@osui/icons": "latest",
+    "@osui/image": "latest",
+    "@osui/input": "latest",
+    "@osui/input-number": "latest",
+    "@osui/joyride": "latest",
+    "@osui/layout": "latest",
+    "@osui/list": "latest",
+    "@osui/markdown": "latest",
+    "@osui/mentions": "latest",
+    "@osui/menu": "latest",
+    "@osui/message": "latest",
+    "@osui/modal": "latest",
+    "@osui/notification": "latest",
+    "@osui/pagination": "latest",
+    "@osui/popconfirm": "latest",
+    "@osui/popover": "latest",
+    "@osui/progress": "latest",
+    "@osui/quick-edit": "latest",
+    "@osui/radio": "latest",
+    "@osui/rate": "latest",
+    "@osui/result": "latest",
+    "@osui/row": "latest",
+    "@osui/segmented": "latest",
+    "@osui/select": "latest",
+    "@osui/skeleton": "latest",
+    "@osui/slider": "latest",
+    "@osui/space": "latest",
+    "@osui/spin": "latest",
+    "@osui/statistic": "latest",
+    "@osui/steps": "latest",
+    "@osui/switch": "latest",
+    "@osui/table": "latest",
+    "@osui/tabs": "latest",
+    "@osui/tag": "latest",
+    "@osui/text-overflow-tooltip": "latest",
+    "@osui/theme-provider": "latest",
+    "@osui/time-picker": "latest",
+    "@osui/timeline": "latest",
+    "@osui/tooltip": "latest",
+    "@osui/transfer": "latest",
+    "@osui/tree": "latest",
+    "@osui/tree-select": "latest",
+    "@osui/typography": "latest",
+    "@osui/upload": "latest",
+    "@osui/version": "latest",
+    "antd": "5.4.7",
+    "classnames": "^2.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "type": "module"
 }
