--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
         "packages/*",
         "packages/ui/*",
         "packages/ui-icons/*",
-        "packages/ui-theme/*",
-        "packages/docs/*"
+        "packages/ui-theme/*"
     ],
     "description": "通用组件库",
     "author": "osc,baidu",
     "license": "MIT",
     "scripts": {
-        "lint": "pnpm workspaces run lint",
+        "lint": "SKR_LOGGING=debug lerna run lint",
         "build": "lerna run --stream --sort build && pnpm --filter @osui/ui build-all",
         "lint:fix": "lerna run lint -- --fix",
         "clean": "lerna run clean",
@@ -33,11 +32,10 @@
         "@babel/core": "^7.18.10",
         "@commitlint/cli": "^9.1.2",
         "@commitlint/config-conventional": "^9.1.2",
-        "@ecomfe/stylelint-config": "^1.1.2",
         "@emotion/babel-preset-css-prop": "^11.10.0",
-        "@reskript/cli": "^6.0.3",
-        "@reskript/cli-lint": "^6.0.3",
-        "@reskript/config-lint": "^6.0.3",
+        "@reskript/cli": "6.1.1",
+        "@reskript/cli-lint": "6.1.1",
+        "@reskript/config-lint": "6.1.1",
         "@storybook/cli": "^7.5.1",
         "@storybook/react-vite": "^7.5.1",
         "@types/css": "^0.0.33",
@@ -50,6 +48,7 @@
         "cz-conventional-changelog": "^3.3.0",
         "enzyme-adapter-react-16": "^1.15.6",
         "enzyme-to-json": "^3.6.2",
+        "eslint": "^8.56.0",
         "eslint-plugin-import": "^2.26.0",
         "glob": "^8.0.3",
         "globby": "^13.1.2",
@@ -66,6 +65,7 @@
         "require-from-string": "^2.0.2",
         "rimraf": "^3.0.2",
         "styled-components": "~5.3.5",
+        "stylelint": "^14.0.0",
         "stylelint-config-rational-order": "^0.1.2",
         "typescript": "^4.7.4",
         "vite": "^4.5.0"
