--- a/packages/ui/brand-provider/package.json
+++ b/packages/ui/brand-provider/package.json
@@ -55,14 +55,10 @@
         "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
         "antd": "^5.8.6",
-        "babel-loader": "^8.1.0",
-        "babel-merge": "^3.0.0",
         "chokidar": "^3.5.3",
         "cpy-cli": "^3.1.1",
         "enzyme": "^3.11.0",
-        "eslint": "^8.0.0",
-        "eslint-plugin-storybook": "^0.6.15",
-        "husky": "^4.2.5",
+            "husky": "^4.2.5",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
         "less-plugin-npm-import": "^2.1.0",
@@ -98,11 +94,7 @@
     "dependencies": {
         "@osui/empty": "^3.0.3"
     },
-    "packageManager": "pnpm@7.14.2",
-    "gitHead": "a9b8eb0a08430c6a35bd7f6553c3e583021eb96f",
-    "eslintConfig": {
-        "extends": [
-            "plugin:storybook/recommended"
-        ]
-    }
+    "packageManager": "pnpm@8.10.2",
+"gitHead": "a9b8eb0a08430c6a35bd7f6553c3e583021eb96f"
+    
 }
