--- a/packages/ui/steps/package.json
+++ b/packages/ui/steps/package.json
@@ -58,9 +58,7 @@
         "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
         "enzyme": "^3.11.0",
-        "eslint": "^8.0.0",
-        "eslint-plugin-storybook": "^0.6.15",
-        "husky": "^4.2.5",
+            "husky": "^4.2.5",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
         "less-plugin-npm-import": "^2.1.0",
@@ -96,11 +94,7 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "packageManager": "pnpm@7.14.2",
-    "gitHead": "a9b8eb0a08430c6a35bd7f6553c3e583021eb96f",
-    "eslintConfig": {
-        "extends": [
-            "plugin:storybook/recommended"
-        ]
-    }
+    "packageManager": "pnpm@8.10.2",
+"gitHead": "a9b8eb0a08430c6a35bd7f6553c3e583021eb96f"
+    
 }
