--- a/packages/ui/tag/package.json
+++ b/packages/ui/tag/package.json
@@ -58,13 +58,9 @@
         "@types/react-test-renderer": "^17.0.1",
         "ClockCircleOutlined": "link:@ant-design/icons/ClockCircleOutlined",
         "antd": "^5.12.5",
-        "babel-loader": "^8.1.0",
-        "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
         "enzyme": "^3.11.0",
-        "eslint": "^8.0.0",
-        "eslint-plugin-storybook": "^0.6.15",
-        "husky": "^4.2.5",
+            "husky": "^4.2.5",
         "identity-obj-proxy": "^3.0.0",
         "immer": "^9.0.12",
         "jest": "^27.0.6",
@@ -107,10 +103,5 @@
         "registry": "https://registry.npmjs.com"
     },
     "gitHead": "a9b8eb0a08430c6a35bd7f6553c3e583021eb96f",
-    "packageManager": "pnpm@7.14.2",
-    "eslintConfig": {
-        "extends": [
-            "plugin:storybook/recommended"
-        ]
-    }
+    "packageManager": "pnpm@8.10.2"
 }
