--- a/templates/component/package.json
+++ b/templates/component/package.json
@@ -43,19 +43,15 @@
         "@storybook/react": "^7.5.1",
         "@storybook/react-vite": "^7.5.1",
         "@storybook/testing-library": "^0.2.2",
-        "eslint-plugin-storybook": "^0.6.15",
-        "storybook": "^7.5.1",
+            "storybook": "^7.5.1",
         "storybook-dark-mode": "^3.0.1",
         "@types/enzyme": "^3.10.9",
         "@types/jest": "^27.0.0",
         "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
         "antd": "^5.8.6",
-        "babel-loader": "^8.1.0",
-        "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
-        "enzyme": "^3.11.0",
-        "husky": "^4.2.5",
+        "enzyme": "^3.11.0","husky": "^4.2.5",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
         "prop-types": "^15.7.2",
