--- a/templates/component/package.json
+++ b/templates/component/package.json
@@ -51,8 +51,7 @@
         "@types/react-test-renderer": "^17.0.1",
         "antd": "^5.8.6",
         "cpy-cli": "^3.1.1",
-        "enzyme": "^3.11.0","husky": "^4.2.5",
-        "identity-obj-proxy": "^3.0.0",
+        "enzyme": "^3.11.0",        "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
