--- a/packages/ui/tree-select/package.json
+++ b/packages/ui/tree-select/package.json
@@ -60,6 +60,7 @@
         "less-plugin-npm-import": "^2.1.0",
         "prop-types": "^15.7.2",
         "rc-tree-select": "^4.4.0-alpha.2",
+        "rc-select": "^14.1.13",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-is": "^17.0.2",
